--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
 </head>
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FDE3F9;">
+        <a class="navbar-brand" href="#">SIRA NAILS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Cursos <span class="sr-only">(current)</span></a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Nosotros <span class="sr-only">(current)</span></a>
+              </li>
+
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Contacto <span class="sr-only">(current)</span></a>
+            </li>
+
+
+          </ul>
+        </div>
+      </nav>
 
 
 
