--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
           <!--MENÚ-->
 
-          <div class="menu">
+          <div class="menu"> 
             <ul>
               <li><a href="">Inicio</a></li>
               <li><a href="">Cursos</a></li>
@@ -32,16 +32,23 @@
           </div>
         </nav>
 
+        <!--ALERTA CUOTAS SIN INTERÉS-->
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+          ¡Pagá todos los cursos mediante MercadoPago en <strong>cuotas sin interés</strong> o transferencia bancaria!
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
 
-        
         <!---->
       </header>
+
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+              <img src="img/home.jpg" class="d-block w-100" alt="...">
+          </div>
+      </div>
 
 
 
@@ -56,7 +63,7 @@
 
 
 
-      <p class="publicidad">Page created by <a href="https://twitter.com/markkk41">@Mark</a> - 2020</p>
+      <p class="publicidad">© All rights reserved <a href="https://twitter.com/markkk41" target="_blank"><strong>@Mark</strong></a> - 2020</p>
 
 
     <!--SCRIPTS jQuery, Popper y bootstrap-->
